--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 .app {
+  --main-color:#ff7200;
   height: 100vh;
   background-color: #f5f5f5;
+}
+.main-color {
+  color: #ff7200;
+}
+.pad-15 {
+  padding: 15px;
+}
+.pad {
+  padding: 10px 15px;
 }
