--- a/src/home/home.module.less
+++ b/src/home/home.module.less
@@ -2,12 +2,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background: #ffffff;
-}
-
-.top {
-  flex: 0;
-  border-bottom: solid 1px var(--adm-border-color);
+  background: #f5f5f5;
 }
 
 .body {
@@ -20,4 +15,5 @@
 .bottom {
   flex: 0;
   border-top: solid 1px var(--adm-border-color);
+  background-color: #fff;
 }
