--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,15 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: 14px;
 }
 .app {
   --main-color:#ff7200;
   height: 100vh;
   background-color: #f5f5f5;
+}
+li {
+  list-style: none;
 }
 .main-color {
   color: #ff7200;
@@ -16,4 +20,7 @@
 }
 .pad {
   padding: 10px 15px;
+}
+.adm-tab-bar-item-icon svg {
+  font-size: 18px;
 }
