--- a/src/page/home/cookbook/ui/index.less
+++ b/src/page/home/cookbook/ui/index.less
@@ -18,16 +18,16 @@
   .body {
     display: flex;
     flex: 1;
+    overflow-y: auto;
     >div {
       width: 100%;
       .swiper-item {
         height: 160px;
-        color: #ffffff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 36px;
-        user-select: none;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
       .customIndicator {
         position: absolute;
@@ -65,6 +65,41 @@
             }
             &:nth-child(6){
               border-right: 1px solid #eee;
+            }
+          }
+        }
+      }
+      .boutique-box {
+        padding-bottom: 15px;
+        ul {
+          display: flex;
+          flex-wrap: wrap;
+          padding: 0 15px;
+          li {
+            width: 50%;
+            text-align: center;
+            img {
+              width: 100%;
+              height: 100px;
+              object-fit: cover;
+            }
+            >div {
+             padding: 10px;
+             padding-top: 5px;
+             background-color: #fff;
+              div:last-child {
+                color: #999;
+                font-size: 12px;
+              }
+            }
+            &:nth-child(2n - 1){
+              padding-right: 5px;
+            }
+            &:nth-child(2n){
+              padding-left: 5px;
+            }
+            &:nth-child(n + 3){
+              margin-top: 10px;
             }
           }
         }
