--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   --main-color:#ff7200;
   height: 100vh;
   background-color: #f5f5f5;
+  overflow: hidden;
 }
 li {
   list-style: none;
@@ -49,4 +50,26 @@ li {
   display: flex;
   -webkit-justify-content: space-between;
   justify-content: space-between;
+}
+.line-1 {
+  word-break:keep-all;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis; 
+}
+.line-2 {
+  overflow:hidden; 
+  text-overflow:ellipsis;
+  display:-webkit-box; 
+  display:-ms-box; 
+  display:-o-box; 
+  display:-moz-box; 
+  -webkit-box-orient:vertical;
+  -ms-box-orient:vertical;
+  -o-box-orient:vertical;
+  -moz-box-orient:vertical;
+  -webkit-line-clamp:2; 
+  -ms-line-clamp:2; 
+  -o-line-clamp:2; 
+  -moz-line-clamp:2; 
 }
